k8s/service.yml
apiVersion: v1
kind: Service
metadata:
  name: demo-service
spec:
  type: NodePort
  selector:
    app: demo
  ports:
    - port: 3000
      targetPort: 3000
      nodePort: 30000
